2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-691

	* src/m_fos.cc (iyHybrid), rte.[cc,h] (get_ppath_scat_source):
	Moved all scat source calculation stuff into an individual function.

2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-690

	* src/m_fos.cc (iyHybrid):
	Implemented scat source term calculation (not jacobians capable yet).

2017-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-689

	* src/sensor.cc (integration_bin_by_vecmult): New function. So far
	just coding, no testing done.

	(sensor_integration_vector2): Removed this
	function. It was not used in any way. Seems that it was an old
	version of the function, before normalisation of x_f was
	introduced.

	(summation_by_vecmult):
	(integration_func_by_vecmult): Renaming of two old functions. They
	before started with sensor_, but they are not limited to sensor
	calculations.

	* src/sensor.cc: Changes in sevaral functions due to renaming above.

2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-688

	* src/rt4.cc:
	General cleanup from (outcommented and active) couts.

	(sca_optpropCalc):
	Bugfix I. Affected calculations with "semi-bad" normed RT4 scattering
	matrices (ie cases that did pass the error threshold, but were bad
	enough to trigger a out2 warning message and by that unintentionally
	skip the renormalization), which easily occured when increasing
	pfct_threshold to avoid the bad-norm error throwing. :(((
	Good thing: RT4 results are more stable over nstreams now. Bad thing:
	complete (re)normalisartion takes time, i.e. calculations take
	noticeably longer now.
	Bugfix II. Calculate complete scattering matrix structure when
	auto_inc_stream limit is hit, but calculation shall be executed (aka
	robust=1) anyways.

	* src/m_rt4.cc:
	Made pfct_threshold an internal global constant (to avoid inconsistent
	settings in the different RT4Calc* methods).

	* 3rdparty/polradtran/rt4/radscat4.f, radtran4.f: