@@ -1,3 +1,13 @@
+2017-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-692
+
+	* src/m_cloudradar.cc (yCloudRadarNew): New version of
+	yCloudRadar, not yet active.
+
+	* src/sensor.cc (integration_bin_by_vecmult): Varoius changes, now
+	seems to work. And now also handles decreasing grids.
+
 2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-691
